--- a/LibraryApp/appsettings.json
+++ b/LibraryApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "mongodb://localhost:8081"
   },
   "Logging": {
     "LogLevel": {
