--- a/LibraryApp/appsettings.Development.json
+++ b/LibraryApp/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb://root:example@localhost:8082/"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
