--- a/LibraryApp/appsettings.json
+++ b/LibraryApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "mongodb://localhost:8081"
+    "DefaultConnection": "mongodb://root:example@localhost:8082/"
   },
   "Logging": {
     "LogLevel": {
