--- a/local.yaml
+++ b/local.yaml
@@ -7,14 +7,16 @@ services:
     build: .
     ports: 
       - 8080:80
-      - 8089:443
-
+      
   mongo:
     image: mongo
     restart: always
+    ports:
+      - 8082:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+    
 
   mongo-express:
     image: mongo-express
