--- a/LibraryApp/LibraryApp.csproj
+++ b/LibraryApp/LibraryApp.csproj
@@ -21,4 +21,8 @@
         <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Shared\Layout" />
+    </ItemGroup>
+
 </Project>
