Generic DB access provider

--- a/LibraryApp/appsettings.json
+++ b/LibraryApp/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "mongodb://root:example@localhost:8082/"
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://root:example@localhost:8082/",
+    "DatabaseName": "library"
   },
   "Logging": {
     "LogLevel": {
