--- a/LibraryApp/LibraryApp.csproj
+++ b/LibraryApp/LibraryApp.csproj
@@ -21,5 +21,10 @@
         <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Pages\Products\Details" />
+      <Folder Include="Pages\Products\Overviews" />
+    </ItemGroup>
+
 
 </Project>
