--- a/LibraryApp/LibraryApp.csproj
+++ b/LibraryApp/LibraryApp.csproj
@@ -19,11 +19,13 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+        <PackageReference Include="Radzen.Blazor" Version="4.3.8" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Pages\Products\Details" />
       <Folder Include="Pages\Products\Overviews" />
+      <Folder Include="Shared\ModelDetails" />
     </ItemGroup>
 
 
